Fix bg flicker by using bg-attach.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope&family=Source+Code+Pro&display=swap');
 
 :root {
-  --background: rgb(30, 30, 30);
+  --body-bg: rgb(103, 0, 238);
+  --box-bg: rgb(30, 30, 30);
   --gold: #FFD700;
   --code-blue:rgb(151, 151, 255);
   --code-light-blue:rgb(169, 169, 255);
@@ -18,6 +19,9 @@
 
 body {
   background-image: linear-gradient(to right, #17123d, #3d387e, #323254);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  /*background-color: var(--body-bg);*/
   color: var(--white);
   margin: 0;
   padding: 0;
@@ -84,7 +88,7 @@ td {
   flex-direction: row;
   position: sticky;
   top: 0;
-  background-color: var(--background);
+  background-color: var(--box-bg);
   z-index: 99;
 }
 
@@ -131,7 +135,7 @@ nav li {
 }
 
 footer { 
-  background-color: var(--background);
+  background-color: var(--box-bg);
   padding: 0 var(--page-border);
 }
 
@@ -162,7 +166,7 @@ footer {
   justify-content: center;
   margin: 0 auto;
   padding: 5%;
-  background-color: var(--background);
+  background-color: var(--box-bg);
   box-shadow:
     30px 40px 20px 2px rgb(0, 0, 0);
 }
@@ -243,7 +247,7 @@ header h1 {
 }
 
 .project-btns div {
-  background-color: var(--background);
+  background-color: var(--box-bg);
   padding: 5px 10px;
   color: var(--aqua);
   font-size: calc(12px + 0.5vw);
@@ -254,7 +258,7 @@ header h1 {
 
 .project-btns div:hover {
   background-color: var(--aqua);
-  color: var(--background);
+  color: var(--box-bg);
   border-color: var(--aqua);
 }
 
